--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <orm.connection.driver>org.h2.Driver</orm.connection.driver>
     <orm.connection.url>jdbc:h2:test</orm.connection.url>
     <orm.connection.username>se</orm.connection.username>
-    <orm.connection.password></orm.connection.password>
+    <orm.connection.password/>
   </properties>
 
   <dependencies>
