--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
       <version>${cx.version}</version>
     </dependency>
     <dependency>
+      <groupId>ru.circumflex</groupId>
+      <artifactId>circumflex-xml</artifactId>
+      <version>${cx.version}</version>
+    </dependency>
+    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <version>2.5</version>
